welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:11: error: not found: value PorteBiscuit
if ( estSurBiscuit() && PorteBiscuit() ) {
                        ^